<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.mlin</groupId>
    <artifactId>GLnext</artifactId>
    <!-- NOTE: version is auto-detected using maven-git-versioning-extension (see .mvn/) -->
    <version>1.0-SNAPSHOT</version>

    <name>GLnext</name>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <kotlin.version>1.9.23</kotlin.version>
        <kotlin.code.style>official</kotlin.code.style>
    </properties>

    <repositories>
        <repository>
            <id>iitj</id>
            <url>https://raw.githubusercontent.com/wiki/mlin/iitj/mvn-repo/</url>
        </repository>
        <repository>
            <id>genomicsqlite-jdbc</id>
            <url>https://raw.githubusercontent.com/wiki/mlin/GenomicSQLite/mvn-repo/</url>
        </repository>
        <repository>
            <id>apache-releases</id>
            <url>https://repository.apache.org/content/repositories/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <!--
            Spark dependency; match desired Dataproc Serverless runtime:
            https://cloud.google.com/dataproc-serverless/docs/concepts/versions/dataproc-serverless-versions
            -->
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.12</artifactId>
            <version>3.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.xerial.snappy</groupId>
            <artifactId>snappy-java</artifactId>
            <version>[1.1.10.4,)</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.samtools</groupId>
            <artifactId>htsjdk</artifactId>
            <version>3.0.5</version>
        </dependency>
        <dependency>
            <groupId>com.github.ajalt.clikt</groupId>
            <artifactId>clikt-jvm</artifactId>
            <version>3.5.2</version>
        </dependency>
        <dependency>
            <groupId>com.sksamuel.hoplite</groupId>
            <artifactId>hoplite-core</artifactId>
            <!-- hoplite v2.x requires java 11 -->
            <version>1.4.16</version>
        </dependency>
        <dependency>
            <groupId>com.sksamuel.hoplite</groupId>
            <artifactId>hoplite-toml</artifactId>
            <version>1.4.16</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>net.mlin</groupId>
            <artifactId>iitj</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.41.2.2</version>
        </dependency>
        <dependency>
            <groupId>net.mlin</groupId>
            <artifactId>genomicsqlite-jdbc</artifactId>
            <version>v0.9.4</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test</artifactId>
            <version>1.9.25</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit</artifactId>
            <version>1.9.25</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                  <archive>
                    <manifest>
                      <mainClass>net.mlin.GLnext.SparkApp</mainClass>
                    </manifest>
                  </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <includes>
                                    <include>org.jetbrains.kotlin:* </include>
                                    <include>com.github.samtools:*</include>
                                    <include>com.github.ajalt.clikt:*</include>
                                    <include>com.sksamuel.hoplite:*</include>
                                    <include>org.tomlj:*</include>
                                    <include>net.mlin:*</include>
                                    <include>org.xerial:sqlite-jdbc:*</include>
                                    <include>org.apache.commons:commons-dbcp2:*</include>
                                    <include>org.apache.commons:commons-pool2:*</include>
                                    <include>org.apache.commons:commons-math:*</include>
                                </includes>
                            </artifactSet>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <configuration>
                    <sourceDirs>src</sourceDirs>
                    <jvmTarget>${java.version}</jvmTarget>
                    <myIncremental>true</myIncremental>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals> 
                            <goal>compile</goal> 
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>ktlint</id>
                        <phase>verify</phase>
                        <configuration>
                        <target name="ktlint">
                            <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                <arg value="--android"/>
                                <arg value="--disabled_rules"/>
                                <arg value="no-wildcard-imports,package-name"/>
                                <arg value="src/*.kt"/>
                                <arg value="src/**/*.kt"/>
                                <jvmarg value="--add-opens"/>
                                <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                            </java>
                        </target>
                        </configuration>
                        <goals><goal>run</goal></goals>
                    </execution>
                    <execution>
                        <id>ktlint-format</id>
                        <configuration>
                        <target name="ktlint">
                            <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                <arg value="-F"/>
                                <arg value="--android"/>
                                <arg value="--disabled_rules"/>
                                <arg value="no-wildcard-imports,package-name"/>
                                <arg value="src/*.kt"/>
                                <arg value="src/**/*.kt"/>
                                <jvmarg value="--add-opens"/>
                                <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                            </java>
                        </target>
                        </configuration>
                        <goals><goal>run</goal></goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.pinterest</groupId>
                        <artifactId>ktlint</artifactId>
                        <version>0.48.2</version>
                    </dependency>
                    <!-- additional 3rd party ruleset(s) can be specified here -->
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
